--- a/EMS/core-bundle/src/Resources/views/components/json_menu_nested/template.twig
+++ b/EMS/core-bundle/src/Resources/views/components/json_menu_nested/template.twig
@@ -161,7 +161,7 @@
 
 {%- block jmn_modal_title -%}
     {% if node.icon %}<i class="{{ node.icon }}"></i>&nbsp;{% endif %}
-    {{ action|capitalize }} {{ node.type|capitalize }}
+    {{ action|capitalize }} {{ node ? node.type|capitalize }}
 {%- endblock jmn_modal_title -%}
 
 {%- block jmn_modal_body -%}
