fix: build assets and sitemp (itemAdd pos null)

--- a/demo/skeleton/template_ems/dashboard/sitemap.twig
+++ b/demo/skeleton/template_ems/dashboard/sitemap.twig
@@ -121,7 +121,7 @@
                             fr: { title: page.revision['title_fr'] },
                         }
                     }))
-                    .then((item) => jmn.itemAdd(itemParentId, item))
+                    .then((item) => jmn.itemAdd(itemParentId, item, null))
                     .then((responseAdd) => {
                         let addedItemId = responseAdd.item.id;
                         updatePage(pageId, { menu: addedItemId }).then((json) => {
