fix(core/jmn): jmn component improvements and bugfixes (#609)

--- a/demo/skeleton/template_ems/dashboard/json_menu_nested.twig
+++ b/demo/skeleton/template_ems/dashboard/json_menu_nested.twig
@@ -57,26 +57,43 @@
     </li>
 {%- endblock jmn_button_add_menu -%}
 
-{%- block jmn_button_item_delete -%}
-    {% set buttonLabel = 'Detach' %}
+{%- block jmn_button_item_more_menu -%}
+    <li>{{ template.block('jmn_button_item_view', _context)|raw }}</li>
+    <li>{{ template.block('jmn_button_item_edit', _context)|raw }}</li>
+    {% if item.children|length == 0 %}
+        <li>
+            {% if item.type == 'page' and page and pageInfo %}
+                <button class="btn-detach-page" data-item-id="{{ item.id }}" data-page-id="{{ page.id }}">Detach page</button>
+            {% else %}
+                {{ template.block('jmn_button_item_delete', _context)|raw }}
+            {% endif %}
+        </li>
+    {% endif %}
+{%- endblock jmn_button_item_more_menu -%}
+
+{%- block jmn_button_item_add -%}
+    {% set buttonLabel = "Create #{addNode.type}" %}
     {{ parent() }}
 {%- endblock -%}
 
-{%- block jmn_button_item_add -%}
-    {% set buttonLabel = buttonLabel|default("Create #{addNode.type}") %}
+{%- block jmn_button_item_edit -%}
+    {% if node.type|default('') == 'page' %}{% set buttonLabel = 'Edit item' %}{% endif %}
+    {{ parent() }}
+{%- endblock -%}
+
+{%- block jmn_button_item_view -%}
+    {% if node.type|default('') == 'page' %}{% set buttonLabel = 'View item' %}{% endif %}
     {{ parent() }}
 {%- endblock -%}
 
 {%- block jmn_item_title -%}
     {% if item.type == 'page' %}
         {% if page and pageInfo %}
-            {%- set path = path('emsco_view_revisions', {
-                'type': 'page',
-                'ouuid': page.id,
-            }) -%}
-            <a href="{{ path }}">{{ attribute(page, locale).title|default(page.label) }}</a>
+            <a href="{{ path('emsco_view_revisions', { 'type': 'page', 'ouuid': page.id })  }}">
+                {{ attribute(item.object, locale).title }}
+            </a>
         {% else %}
-            <span class="text-gray">{{ item.label }}</span>
+            <span class="text-gray">{{ attribute(item.object, locale).title|default('???') }}</span>
         {% endif %}
     {% else %}
         {{ parent() }}
@@ -88,9 +105,9 @@
 {% block jmn_cell_content %}
     {% if item.type == 'page' %}
         {% if itemPages|length == 0 %}
-            <button data-id="{{ item.id }}" class="json-post-button btn btn-sm btn-default new-button" data-object="{{ item.object|json_encode|e('html_attr') }}" data-type="{{ item.type|e('html_attr') }}" data-label="{{ item.label|e('html_attr') }}" id="new-btn-{{ item.id|e('html_attr') }}">
-                <i class="fa fa-plus"></i>
-                New {{ item.type }}
+            <button class="json-post-button btn btn-sm btn-default btn-new-page" data-item="{{ item.data|json_encode|e('html_attr') }}">
+                <i class="fa fa-plus"></i>&nbsp;
+                Create {{ item.type }}
             </button>
         {% elseif itemPages|length == 1 %}
             {% if pageInfo and (pageInfo.published('preview') or pageInfo.published('live')) %}
@@ -151,21 +168,42 @@
     {% endif %}
 {% endblock %}
 
+{% block jmn_modal_title %}
+    {% if node.type|default == 'page' and action == 'add' %}{% set modalTitle = 'Create page' %}{% endif %}
+    {% if node.type|default == 'page' and action == 'edit' %}{% set modalTitle = 'Edit item' %}{% endif %}
+    {% if node.type|default == 'page' and action == 'view' %}{% set modalTitle = 'View item' %}{% endif %}
+    {{ parent() }}
+{% endblock jmn_modal_title %}
+
 {% block modal_existing_page_title %}<i class="fa fa-sign-in"></i>&nbsp;Existing content{% endblock modal_existing_page_title %}
 
 {% block modal_existing_page_body %}
     {% set columns = [
-        { "label": "label", "template": "{{ data.source.label }}", "orderField": "label.alpha_order" },
-        { "label": "Live", "template": (block('datatable_column_live')) },
-        { "label": "Last Update", "template": (block('datatable_column_last_update')), "orderField": "_finalization_datetime" },
+        { "label": "Select", "template": (block('table_existing_column_select')) },
+        { "label": "Page", "template": (block('table_existing_column_label')), "orderField": "label.alpha_order" },
+        { "label": "Live", "template": (block('table_existing_column_live')) },
+        { "label": "Last Update", "template": (block('table_existing_column_last_update')), "orderField": "_finalization_datetime" },
     ] %}
-
     {% set rowContext = "{% set docInfo = [line.data.contentType, line.data.id]|join(':')|emsco_document_info %}" %}
-    {{ emsco_datatable(['preview'],['page'], {
-        "frontendOptions": { "order": [[2, 'desc']] },
-        'row_context': rowContext,
-        "columns": columns
-    }) }}
+    <div id="jmn-existing-page-table">
+        {{ emsco_datatable(['preview'],['page'], {
+            "frontendOptions": { "order": [[3, 'desc']] },
+            'row_context': rowContext,
+            "columns": columns,
+            "empty_query": { "bool": { "must_not": [ { "exists": { "field": "menu" } } ] } },
+            "query": { "bool": {
+                "must_not": [ { "exists": { "field": "menu" } } ],
+                "must": [{
+                    "multi_match": {
+                        "fields": [ "live_search", "live_search._2gram","live_search._3gram"],
+                        "query": "%query%",
+                        "operator": "and",
+                        "type": "bool_prefix"
+                    }
+                }]
+            } },
+        }) }}
+    </div>
 {% endblock modal_existing_page_body %}
 
 {% block modal_existing_page_footer %}
@@ -174,16 +212,34 @@
     </div>
 {% endblock modal_existing_page_footer %}
 
-{% block datatable_column_live %}
-    {%- verbatim -%}
+{% block table_existing_column_select %}
+{%- verbatim -%}
+    <div style="width: 120px;">
+        {% if docInfo.hasDraft %}
+            <span class="label label-default">In draft</span>
+        {% else %}
+            <button class="btn btn-sm btn-default btn-add-existing-page" data-page-id="{{ data.id }}">Select</button>
+        {% endif %}
+    </div>
+{%- endverbatim -%}
+{% endblock table_existing_column_select %}
+
+{% block table_existing_column_label %}
+{%- verbatim -%}
+    <a href="{{ path('data.revisions', {ouuid: data.id, type: data.contentType} ) }}">{{ data.source.label }}</a>
+{%- endverbatim -%}
+{% endblock table_existing_column_label %}
+
+{% block table_existing_column_live %}
+{%- verbatim -%}
     <i style="color: {{ docInfo.published('live') and docInfo.aligned('live') ? 'green' : 'red' }}" class="{{ docInfo.published('live') and docInfo.aligned('live') ? 'fa fa-check' : 'fa fa-eye-slash' }}"></i>
 {%- endverbatim -%}
-{% endblock datatable_column_live %}
+{% endblock table_existing_column_live %}
 
-{% block datatable_column_last_update %}
-    {%- verbatim -%}
+{% block table_existing_column_last_update %}
+{%- verbatim -%}
     <div style="width: 130px;" data-toggle="tooltip" data-placement="top" aria-hidden="true" title="By {{ data.source._finalized_by|default }}" >
         {{ data.source._finalization_datetime|default ? data.source._finalization_datetime|date("d/m/Y (H:i)") : "N.A." }}
     </div>
 {%- endverbatim -%}
-{% endblock datatable_column_last_update %}
+{% endblock table_existing_column_last_update %}
